fixed jumping page on transition

--- a/frontend/css/todos.css
+++ b/frontend/css/todos.css
@@ -17,6 +17,7 @@ span, article, footer, time, small {
 
 html{
     background-color: #f5f5f5;
+    overflow: hidden;
 }
 .titles{
     font-size: x-large;
